[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid ={ version = "1.11.0", features = ["v4", "serde"] }
warp = "0.3.7"
rand = "0.8.5"
